--- a/package.json
+++ b/package.json
@@ -4,9 +4,12 @@
   "private": true,
   "dependencies": {
     "axios": "^0.27.2",
+    "chart.js": "^3.9.1",
     "dotenv": "^16.0.2",
+    "framer-motion": "^7.5.1",
     "jwt-decode": "^3.1.2",
     "react": "^18.2.0",
+    "react-chartjs-2": "^4.3.1",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.32.2",
     "react-icons": "^4.4.0",
