--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "axios": "^0.27.2",
     "chart.js": "^3.9.1",
+    "chartjs-plugin-datalabels": "^2.1.0",
     "dotenv": "^16.0.2",
     "framer-motion": "^7.5.1",
     "jwt-decode": "^3.1.2",
