--- a/src/configs/config.json
+++ b/src/configs/config.json
@@ -1,3 +1,4 @@
 {
-  "API_URL": "http://localhost:5000"
+  "API_URL": "http://localhost:5000",
+  "API_IMAGE_URL": "http://localhost:5000/images"
 }
