--- a/package.json
+++ b/package.json
@@ -7,6 +7,8 @@
     "chart.js": "^3.9.1",
     "chartjs-plugin-datalabels": "^2.1.0",
     "dotenv": "^16.0.2",
+    "flowbite": "^1.5.3",
+    "flowbite-react": "^0.2.0",
     "framer-motion": "^7.5.1",
     "jwt-decode": "^3.1.2",
     "react": "^18.2.0",
