--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "react-icons": "^4.4.0",
     "react-pdf": "^5.7.2",
     "react-router-dom": "^6.3.0",
-    "react-scripts": "5.0.1"
+    "react-scripts": "5.0.1",
+    "react-select": "^5.5.4"
   },
   "scripts": {
     "start": "react-scripts start",
