--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react-pdf": "^5.7.2",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
+    "react-secure-storage": "^1.0.21",
     "react-select": "^5.5.4"
   },
   "scripts": {
