--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
     "react-secure-storage": "^1.0.21",
-    "react-select": "^5.5.4"
+    "react-select": "^5.5.4",
+    "react-toggle": "^4.1.3"
   },
   "scripts": {
     "start": "react-scripts start",
